--- a/src/home.html
+++ b/src/home.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <script src="script.js"></script>
     <title>My Electron App</title>
 </head>
 
@@ -20,6 +21,11 @@
             </div>
  
             <div class="col-md-6">
+                <input class="form-control" id="newTask" placeholder="Enter New Task" />
+                <br />
+                <button type="button" class="btn btn-primary" id="addTask">
+                    Add Task
+                </button>
             </div>
         </div>
     </div>
